--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
         </developer>
         <developer>
             <name>Johan Kaving</name>
+            <url>https://github.com/jkaving/</url>
+        </developer>
+        <developer>
+            <name>Nikolay Khramchenkov</name>
+            <url>https://github.com/xnike</url>
         </developer>
         <developer>
             <name>Maciej Kwiecien</name>
@@ -192,13 +197,13 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <junit.version>4.12</junit.version>
+        <junit.version>4.13.1</junit.version>
         <hamcrest.version>1.3</hamcrest.version>
         <mockito.version>1.10.19</mockito.version>
         <jdk.source.version>1.8</jdk.source.version>
         <jdk.target.version>1.8</jdk.target.version>
         <tools.maven.plugin.version>1.4</tools.maven.plugin.version>
-        <jacoco.maven.plugin.version>0.8.4</jacoco.maven.plugin.version>
+        <jacoco.maven.plugin.version>0.8.6</jacoco.maven.plugin.version>
         <maven.source.plugin.version>3.0.1</maven.source.plugin.version>
         <maven.javadoc.plugin.version>3.0.1</maven.javadoc.plugin.version>
         <maven.gpg.plugin.version>1.6</maven.gpg.plugin.version>
